Fixed spacing on map

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -689,6 +689,7 @@ nav {
 #contact iframe {
     border: 16px #FF4A6B solid;
     width: 100%;
+    min-height:500px;
     margin-bottom: 48px;
 }
 
